--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<script src="https://cdn.tailwindcss.com"></script>
 
 <body>
     <div class="container mx-auto p-4">
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="mb-4">
-                    <label class="cursor-pointer block" for="dob">Date of Birth min-18 years</label>
+                    <label class="cursor-pointer block" for="dob">Date of Birth (18 - 55 years old)</label>
                     <input class="border border-pink-700 p-2 rounded w-full" type="date" id="dob" name="dob" required>
                 </div>
 
@@ -46,14 +46,14 @@
             </form>
         </div>
     </div>
-    <div
-     class="relative bg-white px-6 mt-5 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:rounded-lg sm:px-10">
-     <div class="mx-auto">
-        <h2 class="text-3xl text-center font-bold leading-tight">Entries</h2>
-        <div class="divide-y divide-gray-300/50" id="user-entries"></div>
-     </div>
-        
+
+    <div class="relative bg-white px-6 mt-5 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:rounded-lg sm:px-10">
+        <div class="mx-auto">
+            <h2 class="text-3xl text-center font-bold leading-tight">Entries</h2>
+            <div class="divide-y divide-gray-300/50" id="user-entries"></div>
+        </div>
     </div>
+
     <script src="index.js"></script>
 </body>
 
