--- a/index.html
+++ b/index.html
@@ -1,60 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+      <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+        <h2
+          class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
+        >
+          Registration From
+        </h2>
+      </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
-    <link rel="stylesheet" href="styles.css">
+      <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+        <form id="user_form" class="space-y-6">
+          <div>
+            <label
+              for="name"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Name</label
+            >
+            <div class="mt-2">
+              <input
+                id="name"
+                name="name"
+                type="name"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label
+              for="email"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Email address</label
+            >
+            <div class="mt-2">
+              <input
+                id="email"
+                name="email"
+                type="email"
+                autocomplete="email"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <div class="flex items-center justify-between">
+              <label
+                for="password"
+                class="block text-sm font-medium leading-6 text-gray-900"
+                >Password</label
+              >
+            </div>
+            <div class="mt-2">
+              <input
+                id="password"
+                name="password"
+                type="password"
+                autocomplete="current-password"
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label
+              for="dob"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Date</label
+            >
+            <div class="mt-2">
+              <input
+                id="dob"
+                name="dob"
+                type="date"
+                min=""
+                max=""
+                required
+                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label
+              for="accept"
+              class="block text-sm font-medium leading-6 text-gray-900 inline-block"
+              >Accept Terms & Conditions</label
+            >
+            <div class="mt-2">
+              <input
+                id="accept"
+                name="accept"
+                type="checkbox"
+                required
+                class="bg-gray-100 inline-block rounded-lg shadow-md px-4 py-3 mb-5 text-base leading-6 placeholder-gray-500 focus:outline-none focus:placeholder-gray"
+              />
+            </div>
+          </div>
+
+          <div>
+            <button
+              type="submit"
+              class="flex w-20 justify-center rounded-md bg-green-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-cyan -500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+            >
+              Submit
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div id="user-entries"></div>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body>
-    <div class="container mx-auto p-4">
-        <div class="form-container space-x-7">
-            <h1 class="font-serif text-2xl mb-4">Log in</h1>
-            <form id="user_form">
-                <div class="mb-4">
-                    <label class="cursor-pointer block" for="name">Name</label>
-                    <input class="border border-pink-700 p-2 rounded w-full" type="text" id="name" name="name" required>
-                </div>
-
-                <div class="mb-4">
-                    <label class="cursor-pointer block" for="email">Email</label>
-                    <input class="border border-pink-700 p-2 rounded w-full" aria-required type="email" id="email"
-                        name="email" required>
-                </div>
-
-                <div class="mb-4">
-                    <label class="cursor-pointer block" for="password">Password</label>
-                    <input class="border border-pink-700 p-2 rounded w-full" type="password" id="password"
-                        name="password" required>
-                </div>
-
-                <div class="mb-4">
-                    <label class="cursor-pointer block" for="dob">Date of Birth (18 - 55 years old)</label>
-                    <input class="border border-pink-700 p-2 rounded w-full" type="date" id="dob" name="dob" required>
-                </div>
-
-                <div class="mb-4">
-                    <input type="checkbox" id="checkbox" name="checkbox" required>
-                    <label for="checkbox">Accept Terms & Conditions</label>
-                </div>
-
-                <button id="submit" class="bg-pink-700 text-white p-2 rounded hover:bg-pink-800 cursor-pointer"
-                    type="submit">SUBMIT</button>
-            </form>
-        </div>
-    </div>
-
-    <div class="relative bg-white px-6 mt-5 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:rounded-lg sm:px-10">
-        <div class="mx-auto">
-            <h2 class="text-3xl text-center font-bold leading-tight">Entries</h2>
-            <div class="divide-y divide-gray-300/50" id="user-entries"></div>
-        </div>
-    </div>
-
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
